Action Buttons Title

--- a/chmc_wbms/templates/employee/examination.html
+++ b/chmc_wbms/templates/employee/examination.html
@@ -28,28 +28,16 @@
         <tr>
           <!-- Actions -->
           <td>
-<<<<<<< HEAD
-            <div>
-            {% if exam.has_edited_document %}
-              <a href="{% url 'view_document' exam.pk %}" class="btn btn-primary">View Document</a>
-            {% elif exam.document %}
-              <a href="{{ exam.document.url }}" target="_blank" class="btn btn-primary">Download Document</a>
-            {% else %}
-              No Document
-            {% endif %}
-
-            <button type="button" class="btn btn-secondary" onclick="openModal({{ exam.pk }})" title="Edited Document">Upload Edited Document</button>
-=======
             <div class="btn-container">
               {% if exam.has_edited_document %}
                 <!-- View Document -->
-                <a href="{% url 'view_document' exam.pk %}" class="btnex btn-primary">
+                <a href="{% url 'view_document' exam.pk %}" class="btnex btn-primary" title="View Document">
                   <span class="material-symbols-outlined">visibility</span>
                   <span class="btn-text">View Document</span>
                 </a>
               {% elif exam.document %}
                 <!-- Download Document -->
-                <a href="{{ exam.document.url }}" target="_blank" class="btnex btn-primary">
+                <a href="{{ exam.document.url }}" target="_blank" class="btnex btn-primary" title="Download Document">
                   <span class="material-symbols-outlined">download</span>
                   <span class="btn-text">Download Document</span>
                 </a>
@@ -58,37 +46,36 @@
               {% endif %}
           
               <!-- Upload Edited Document -->
-              <button type="button" class="btnex btn-secondary" onclick="openModal({{ exam.pk }})">
+              <button type="button" class="btnex btn-secondary" onclick="openModal({{ exam.pk }})" title="Upload Edited Document">
                 <span class="material-symbols-outlined">upload</span>
                 <span class="btn-text">Upload Edited Document</span>
               </button>
           
               {% if exam.result_image %}
                 <!-- View Examination Result -->
-                <a href="{{ exam.result_image.url }}" target="_blank" class="btnex btn-success">
+                <a href="{{ exam.result_image.url }}" target="_blank" class="btnex btn-success" title="View Examination Result">
                   <span class="material-symbols-outlined">panorama</span>
                   <span class="btn-text">View Examination Result</span>
                 </a>
           
                 <!-- Change Examination Result -->
-                <button type="button" class="btnex btn-warning" onclick="openCameraModal({{ exam.pk }}, true)">
+                <button type="button" class="btnex btn-warning" onclick="openCameraModal({{ exam.pk }}, true)" title="Change Examination Result Image">
                   <span class="material-symbols-outlined">add_photo_alternate</span>
-                  <span class="btn-text">Change Examination Result</span>
+                  <span class="btn-text">Change Examination Result Image</span>
                 </button>
               {% else %}
                 <!-- Upload Examination Result -->
-                <button type="button" class="btnex btn-info" onclick="openCameraModal({{ exam.pk }}, false)">
+                <button type="button" class="btnex btn-info" onclick="openCameraModal({{ exam.pk }}, false)" title="Upload Examination Result Image">
                   <span class="material-symbols-outlined">add_a_photo</span>
                   <span class="btn-text">Upload Examination Result Image</span>
                 </button>
               {% endif %}
           
               <!-- Edit Examination -->
-              <button type="button" class="btnex btn-primary" onclick="openEditModal({{ exam.pk }})">
+              <button type="button" class="btnex btn-primary" onclick="openEditModal({{ exam.pk }})" title="Edit Examination">
                 <span class="material-symbols-outlined">edit</span>
                 <span class="btn-text">Edit Examination</span>
               </button>
->>>>>>> a460171308ab30d3fb520c472774acd145de0313
             </div>
           </td>
           <!-- Patient Details -->
