--- a/chmc_wbms/templates/admin/admin_login.html
+++ b/chmc_wbms/templates/admin/admin_login.html
@@ -46,8 +46,8 @@
                             <label class="section_form_input--password ui input gray_200 size-xs fill round mt-3">
                                 <input name="password" placeholder="PASSWORD" type="password" required />
                             </label>
-                            <a href="{% url 'employee_login' %}" class="forgot-password-link ml-5">
-                                <h2 class="ui heading size-headingxs">EMPLOYEE LOGIN</h2>
+                            <a href="{% url 'user_login' %}" class="forgot-password-link ml-5">
+                                <h2 class="ui heading size-headingxs">USER LOGIN</h2>
                             </a>
                             <button type="submit" class="section_form_button--login ui button blue_a100_6b size-lg fill round">
                                 LOGIN
