--- a/chmc_wbms/templates/associated_doctor/assocdoc_dashboard.html
+++ b/chmc_wbms/templates/associated_doctor/assocdoc_dashboard.html
@@ -20,19 +20,13 @@
     <div class="row text-center">
         <div class="col-md-4 mb-3">
             <div class="card p-3">
-                <p class="font-weight-bold">This Week Total Income</p>
-                <h2 class="text-primary">₱6,583</h2>
-            </div>
-        </div>
-        <div class="col-md-4 mb-3">
-            <div class="card p-3">
-                <p class="font-weight-bold">This Week Total Patient Serve</p>
+                <p class="font-weight-bold">Total Assigned Patients</p>
                 <h2 class="text-primary">25</h2>
             </div>
         </div>
         <div class="col-md-4 mb-3">
             <div class="card p-3">
-                <p class="font-weight-bold">Total Appointments Today</p>
+                <p class="font-weight-bold">Document Results Handled</p>
                 <h2 class="text-primary">8</h2>
             </div>
         </div>
