--- a/chmc_wbms/templates/employee/patients_list.html
+++ b/chmc_wbms/templates/employee/patients_list.html
@@ -44,7 +44,7 @@
                                 {% endif %}
                             </div>
                             <p><strong>Full Name:</strong> {{ patient.get_full_name_with_middle_initial }}</p>
-                            <p><strong>Formatted ID:</strong> {{ patient.get_formatted_id }}</p>
+                            <p><strong>Patient ID:</strong> {{ patient.get_formatted_id }}</p>
                             <p><strong>Age:</strong> {{ patient.age }}</p>
                             <p><strong>Sex:</strong> {{ patient.sex }}</p>
                             <p><strong>Address:</strong> {{ patient.address }}</p>
