--- a/chmc_wbms/templates/employee/examination.html
+++ b/chmc_wbms/templates/employee/examination.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container my-4">
-  <div class="table-responsive" style="max-height: 550px; overflow-y: auto; position: relative;">
+  <div class="table-responsive" style="max-height: 627px; position: relative;">
     <table class="table table-bordered text-center align-middle">
       <thead class="bg-primary text-white" style="position: sticky; top: 0; z-index: 1020;">
         <tr>
@@ -223,7 +223,34 @@
         {% endfor %}
       </tbody>
     </table>
-  </div>
+
+<!-- Pagination -->
+<div class="pagination-container">
+  <nav aria-label="Page navigation">
+    <ul class="pagination justify-content-end">
+      {% if examinations.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="?page=1">&laquo; First</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page={{ examinations.previous_page_number }}">Previous</a>
+        </li>
+      {% endif %}
+
+      <li class="page-item disabled">
+        <span class="page-link">Page {{ examinations.number }} of {{ examinations.paginator.num_pages }}</span>
+      </li>
+
+      {% if examinations.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ examinations.next_page_number }}">Next</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="?page={{ examinations.paginator.num_pages }}">Last &raquo;</a>
+        </li>
+      {% endif %}
+    </ul>
+  </nav>
 </div>
 
 <script>
