--- a/chmc_wbms/templates/employee/employee_base.html
+++ b/chmc_wbms/templates/employee/employee_base.html
@@ -19,6 +19,7 @@
     <link href="{% static 'assets/css/light-bootstrap-dashboard.css' %} " rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="{% static 'assets/css/demo.css' %}" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/font.css' %}">
@@ -78,5 +79,6 @@
 <script src="{% static 'assets/js/plugins/bootstrap-notify.js' %}"></script>
 <script src="{% static 'assets/js/light-bootstrap-dashboard.js?v=2.0.0' %} " type="text/javascript"></script>
 <script src="{% static 'assets/js/demo.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 
 </html>
