--- a/chmc_wbms/templates/employee/examination.html
+++ b/chmc_wbms/templates/employee/examination.html
@@ -8,8 +8,8 @@
   <a href="{% url 'add_examination' %}" class="btn btn-outline-primary">Add New Examination</a>
 </div>
 
-<div class="container my-4">
-  <div class="table-responsive" style="max-height: 627px; position: relative;">
+<div class="container mb-4">
+  <div class="table-responsive" style="max-height: 569px; position: relative;">
     <table class="table table-bordered text-center align-middle">
       <thead class="bg-primary text-white" style="position: sticky; top: 0; z-index: 1020;">
         <tr>
@@ -223,6 +223,8 @@
         {% endfor %}
       </tbody>
     </table>
+  </div>
+</div>
 
 <!-- Pagination -->
 <div class="pagination-container">
