--- a/chmc_wbms/templates/employee/patients_list.html
+++ b/chmc_wbms/templates/employee/patients_list.html
@@ -7,7 +7,8 @@
 <h2>Patients List</h2>
 
 <div class="container my-5">
-    <div class="row scrollable-row">
+  <div class="scrollable-container1" style="max-height: 540px; max-width: auto">
+    <div class="row">
       {% for patient in page_obj %}
       <div class="col-md-4 mb-4">
         <div class="card text-center shadow-sm">
@@ -16,18 +17,19 @@
           {% else %}
           <img class="mx-auto d-block" src="/static/image/profile_ICON.png" alt="Default Profile Icon" width="100" height="100">
           {% endif %}
-            <div class="card-body">
-                <h5 class="card-title">{{ patient.patient_full_name_last_name_start }}</h5>
-                <p class="card-text text-muted">{{ patient.get_formatted_id }}</p>
-                <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#patientModal{{ patient.id }}">
-                  View Details
-                </button>
-              </div>
-            </div>
+          <div class="card-body">
+            <h5 class="card-title">{{ patient.patient_full_name_last_name_start }}</h5>
+            <p class="card-text text-muted">{{ patient.get_formatted_id }}</p>
+            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#patientModal{{ patient.id }}">
+              View Details
+            </button>
+          </div>
         </div>
-        {% endfor %}
       </div>
-      {% include "employee/includes/pagination.html" %}
+      {% endfor %}
+    </div>
+  </div>
+  {% include "employee/includes/pagination.html" %}
   </div>        
 
   {% for patient in patients %}
