--- a/chmc_wbms/templates/admin/admin_base.html
+++ b/chmc_wbms/templates/admin/admin_base.html
@@ -67,6 +67,7 @@
       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
     </li>
   </ul> {% endcomment %}
+<script src="https://unpkg.com/htmx.org@1.9.6"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="{% static 'assets/js/core/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'assets/js/core/popper.min.js' %}" type="text/javascript"></script>
