--- a/chmc_wbms/templates/employee/patients_list.html
+++ b/chmc_wbms/templates/employee/patients_list.html
@@ -48,7 +48,7 @@
 
 
 
-<div class="container my-5" id="patients-container">
+<div class="container mt-1" id="patients-container">
   <div class="scrollable-container1">
     <div class="row">
       {% for patient in page_obj %}
